Add all download url.

--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -31,6 +31,8 @@ import Background from "../components/Background.astro";
           journal="Molecular Ecology Resources"
           pageVol="24(7)"
           doi="https://doi.org/10.1111/1755-0998.13964"
+          pdfUrl="https://www.researchgate.net/publication/380125709_SEGUL_Ultrafast_memory-efficient_and_mobile-friendly_software_for_manipulating_and_summarizing_phylogenomic_datasets"
+          isRequest={true}
         />
         <Published
           author="Nations, J. A., Handika, H., Mursyid, A., Butsa, R. D., Apandi, Achmadi, A. S. Esselstyn, J. A"
@@ -39,6 +41,7 @@ import Background from "../components/Background.astro";
           journal="Journal of Mammalogy"
           pageVol="105 (2), 372-389"
           doi="https://doi.org/10.1093/jmammal/gyad126"
+          pdfUrl="https://www.researchgate.net/publication/377726198_Three_new_shrews_Soricidae_Crocidura_from_West_Sumatra_Indonesia_elevational_and_morphological_divergence_in_syntopic_sister_taxa"
         />
       </Publication>
       <Publication year="2023">
@@ -48,7 +51,8 @@ import Background from "../components/Background.astro";
           title="Trypanosoma (Euglenozoa: Kinetoplastea) infections in rodents, bats, and shrews along an elevation and disturbance gradient in Central Sulawesi, Indonesia"
           journal="Contributions to Mammalogy and Zooarchaeology of Wallacea"
           pageVol="pp.663-671"
-          doi="https://doi.org/10.1111/1755-0998.13964"
+          doi="http://dx.doi.org/10.3853/j.2201-4349.75.2023.1786"
+          pdfUrl="https://journals.australian.museum/media/dd/documents/1786_complete.62f64af.pdf"
         />
         <Published
           author="Achmadi, A. S., Fahri, F., Gazzard, A., Handika, H., Inayah, N., Kennerley, R. J., Lanusi, A. A., Nangoy, M., Nurdin, M. R., Rowe, K. C., Sheherazade"
@@ -57,6 +61,7 @@ import Background from "../components/Background.astro";
           journal="Journal of Mammalogy"
           pageVol="104 (3), 1-12"
           doi="https://doi.org/10.1093/jmammal/gyad126"
+          pdfUrl="https://www.researchgate.net/publication/376432985_Conservation_status_and_priorities_for_Sulawesi's_unique_small_mammal_fauna"
         />
         <Published
           author="Swanson, M.T., Henson, M.W., Handika, H., Achmadi, A.S., Anita, S., Rowe, K.C. and Esselstyn, J.A"
@@ -65,6 +70,7 @@ import Background from "../components/Background.astro";
           journal="Journal of Mammalogy"
           pageVol="104(1), pp.146-158"
           doi="https://doi.org/10.1093/jmammal/gyac098"
+          pdfUrl="https://academic.oup.com/jmammal/article/104/1/146/6823667"
         />
       </Publication>
       <Publication year="2021">
@@ -75,6 +81,7 @@ import Background from "../components/Background.astro";
           journal="Bulletin of the American Museum of Natural History"
           pageVol="454(1), pp.1-108"
           doi="https://doi.org/10.1206/0003-0090.454.1.1"
+          pdfUrl="https://bioone.org/journalArticle/Download?urlId=10.1206%2F0003-0090.454.1.1"
         />
         <Published
           author="Handika, H., Achmadi, A.S., Esselstyn, J.A., and Rowe, K.C"
