--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -10,7 +10,7 @@ import Background from "../components/Background.astro";
 
 <Layout title="Curriculum Vitae">
   <main>
-    <div class="mx-auto max-w-5xl py-6 sm:py-16 lg:py-8">
+    <div class="mx-auto h-full max-w-5xl py-6 sm:py-16 lg:py-8">
       <Background backgroundImage={cvIcon} />
       <PageTitle title="Publications" />
       <Publication year="Forthcoming">
