--- a/src/pages/outreach.astro
+++ b/src/pages/outreach.astro
@@ -3,20 +3,19 @@ import PageTitle from "../components/PageTitle.astro";
 import Layout from "../layouts/Layout.astro";
 import outreachIcon from "../assets/icons/outreach.svg";
 import Background from "../components/Background.astro";
+import MainPage from "../components/MainPage.astro";
 ---
 
 <Layout title="Outreach">
-  <main>
-    <div class="mx-auto max-w-2xl py-6 sm:py-16 lg:py-8">
-      <Background backgroundImage={outreachIcon} />
-      <PageTitle title="Outreach">
-        <p class="dark:text-slate-400 text-slate-500">
-          I am passionate about sharing my research and experiences with the
-          public. I have been involved in various outreach activities, from
-          school visits to public talks. I am also active in science
-          communication through social media and blogging.
-        </p>
-      </PageTitle>
-    </div>
-  </main>
+  <MainPage>
+    <Background backgroundImage={outreachIcon} />
+    <PageTitle title="Outreach">
+      <p class="dark:text-slate-400 text-slate-500">
+        I am passionate about sharing my research and experiences with the
+        public. I have been involved in various outreach activities, from school
+        visits to public talks. I am also active in science communication
+        through social media and blogging.
+      </p>
+    </PageTitle>
+  </MainPage>
 </Layout>
