--- a/src/pages/software.astro
+++ b/src/pages/software.astro
@@ -3,20 +3,19 @@ import PageTitle from "../components/PageTitle.astro";
 import Layout from "../layouts/Layout.astro";
 import codingIcon from "../assets/icons/coding.svg";
 import Background from "../components/Background.astro";
+import MainPage from "../components/MainPage.astro";
 ---
 
 <Layout title="Software">
-  <main>
-    <div class="mx-auto max-w-2xl py-6 sm:py-16 lg:py-8">
-      <Background backgroundImage={codingIcon} />
-      <PageTitle title="Software">
-        <p class="dark:text-slate-400 text-slate-500">
-          I am passionate about developing software tools that help researchers
-          analyze and visualize their data. I have developed several software
-          packages for phylogenomic analysis, data manipulation, and
-          visualization. Below are some of the software tools I have developed.
-        </p>
-      </PageTitle>
-    </div>
-  </main>
+  <MainPage>
+    <Background backgroundImage={codingIcon} />
+    <PageTitle title="Software">
+      <p class="dark:text-slate-400 text-slate-500">
+        I am passionate about developing software tools that help researchers
+        analyze and visualize their data. I have developed several software
+        packages for phylogenomic analysis, data manipulation, and
+        visualization. Below are some of the software tools I have developed.
+      </p>
+    </PageTitle>
+  </MainPage>
 </Layout>
