Fix color and page rendering.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,7 +6,7 @@ import CloseMenuButton from "./buttons/CloseMenuButton.astro";
 const navItems = [
   { path: "/", label: "About" },
   { path: "/projects", label: "Projects" },
-  { path: "/cv", label: "CV" },
+  { path: "/pubs", label: "Publications" },
   { path: "/fieldwork", label: "Fieldwork" },
   { path: "/software", label: "Software" },
   { path: "/teaching", label: "Teaching" },
