--- a/src/layouts/TimelineItem.astro
+++ b/src/layouts/TimelineItem.astro
@@ -58,7 +58,7 @@ const subtitleClasses = cntl`
   <div class="md:flex items-center md:space-x-4">
     <div class={IconDateClasses}>
       <div class={IconClasses}>
-        <RodentIcon fill="currentColor" />
+        <RodentIcon fill="#391d11" />
       </div>
       <p class={dateClasses}>
         {date}
