--- a/src/components/Stats.astro
+++ b/src/components/Stats.astro
@@ -34,7 +34,7 @@ const iconStyle = cntl`
   <p>
     <a href={url}> {title}<LinkIcon style={iconStyle} /></a>
     <p>
-      <strong class="font-bold text-2xl">{value}+</strong>
+      <strong class="font-semibold text-3xl">{value}+</strong>
       {unit}
     </p>
   </p>
