--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -98,7 +98,8 @@ const cardDescriptonClasses = cntl`
           PAB125 Computer Application for Biology
         </p>
         <p class={courseScheduleClasses}>
-          Intructor &middot; 2nd Semester 2012
+          Intructor &middot; 2<span class="align-super text-sm">nd</span>
+          semester 2012
         </p>
         <p class={cardDescriptonClasses}>
           This course introduces students to computer applications in biology
