Add Mantees sections.

--- a/src/pages/teaching.astro
+++ b/src/pages/teaching.astro
@@ -50,11 +50,13 @@ const cardDescriptonClasses = cntl`
 <Layout title="Teaching">
   <MainPage>
     <Background backgroundImage={teachingIcon} />
-    <PageTitle title="Teaching">
+    <PageTitle title="Teaching, Workshops, & Mentoring">
       <p class="dark:text-slate-400 text-slate-500">
-        I have taught courses in introductory biology, genetics, mammalogy, and
-        computer applications for biologists. I have led workshops and mentored
-        students in research and fieldwork.
+        I have had the privilege of teaching various courses, from the
+        fundamentals of biology and genetics to the fascinating world of
+        mammalogy and the innovative use of computer applications in biology.
+        Additionally, I have led workshops and provided mentorship to students
+        both in Indonesia and the United States.
       </p>
     </PageTitle>
     <PageSubtitle subtitle="Courses Taught" />
@@ -163,5 +165,7 @@ const cardDescriptonClasses = cntl`
         </p>
       </div>
     </div>
+    <PageSubtitle subtitle="Mantees" />
+    <p>Coming soon...</p>
   </MainPage>
 </Layout>
