--- a/src/pages/outreach.astro
+++ b/src/pages/outreach.astro
@@ -4,6 +4,7 @@ import Layout from "../layouts/Layout.astro";
 import outreachIcon from "../assets/icons/outreach.svg";
 import Background from "../components/Background.astro";
 import MainPage from "../components/MainPage.astro";
+import PageSubtitle from "../components/PageSubtitle.astro";
 ---
 
 <Layout title="Outreach">
@@ -17,5 +18,6 @@ import MainPage from "../components/MainPage.astro";
         through social media and blogging.
       </p>
     </PageTitle>
+    <PageSubtitle subtitle="Interviews" />
   </MainPage>
 </Layout>
